Change font of <p>, add close button to side pane, fix spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 * {
-  font-family: Poppins;
+  font-family: 'Poppins', sans-serif;
+}
+
+p {
+  font-weight: 200;
 }
 
 header,
